# robot_operating_system_repository

./: setup.cfg
.github/workflows/: ros_test.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mock_sensors/lib/mock_sensors/: mock_imu
install/mock_sensors/share/mock_sensors/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_robot_description/share/ament_index/resource_index/package_run_dependencies/: my_robot_description
install/my_robot_description/share/my_robot_description/: package.sh
install/my_robot_description/share/my_robot_description/cmake/: my_robot_descriptionConfig.cmake
install/my_robot_description/share/my_robot_description/urdf/: my_robot.urdf
install/python_tools/lib/python_tools/: brain_monitor_node  mock_imu
install/python_tools/share/python_tools/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_brain_cpp/lib/robot_brain_cpp/: brain_node
install/robot_brain_cpp/share/ament_index/resource_index/package_run_dependencies/: robot_brain_cpp
install/robot_brain_cpp/share/ament_index/resource_index/parent_prefix_path/: robot_brain_cpp
install/robot_brain_cpp/share/robot_brain_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_brain_cpp/share/robot_brain_cpp/cmake/: robot_brain_cppConfig-version.cmake  robot_brain_cppConfig.cmake
install/robot_brain_cpp/share/robot_brain_cpp/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build  latest_list
rosbag2_2026_02_13-20_44_03/: metadata.yaml  rosbag2_2026_02_13-20_44_03_0.mcap
src/: test_connection.py
src/log/: latest_list
src/mock_sensors/: ament_lint_auto_tests.xml  package.xml  setup.cfg  setup.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_robot_description/launch/: gazebo.launch.py
src/my_robot_description/log/: latest_build
src/my_robot_description/urdf/: my_robot.sdf  my_robot.urdf
src/python_tools/: ament_lint_auto_tests.xml  package.xml  setup.cfg  setup.py
src/python_tools/python_tools/: brain_monitor_node.py
src/python_tools/test/: test_brain_logic.py
src/python_tools/test/install/: local_setup.sh  setup.sh
src/python_tools/test/log/: latest_build
src/robot_brain_cpp/: CMakeLists.txt
src/robot_brain_cpp/src/: brain_node.cpp
